--- a/demo (6-10-2019)/asset/style/main.css
+++ b/demo (6-10-2019)/asset/style/main.css
@@ -2,7 +2,7 @@
     overflow: hidden;
     position: fixed;
     width: 900px;
-    height: 500px;
+    height: 600px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -51,6 +51,10 @@
     display: none;
 }
 
+.hidden-move-button {
+    display: none;
+}
+
 #control {
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
     border-radius: 50px;
@@ -78,4 +82,64 @@
 #button-right {
     position: absolute;
     right: 5px;
+}
+
+#move-control {
+    position: absolute;
+    color: white;
+    width: inherit;
+    height: inherit;
+}
+
+.move {
+    width: 90px;
+    height: 90px;
+    position: absolute;
+    border-radius: 90px;
+    background-color: rgba(255, 255, 255, .15);
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
+    backdrop-filter: blur(5px);
+}
+
+#move-left {
+    left: 15%;
+    top: 50%;
+    transform: translate(50%, -50%);
+}
+
+#move-right {
+    right: 25%;
+    top: 50%;
+    transform: translate(50%, -50%);
+}
+
+#move-forward {
+    top: 40%;
+    right: 50%;
+    transform: translate(50%, -50%);
+}
+
+#move-back {
+    bottom: 20%;
+    right: 50%;
+    transform: translate(50%, -50%);
+}
+
+.icon-move-left {
+    margin: 5px;
+}
+
+.icon-move-right {
+    margin-top: 5px;
+    margin-left: 10px;
+}
+
+.icon-move-forward {
+    margin-top: 5px;
+    margin-left: 20px;
+}
+
+.icon-move-back {
+    margin-top: 5px;
+    margin-left: 20px;
 }
